--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,122 @@
-.flag{
-    width: 50px;
+/* RESET */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif
+}
+
+
+img {
+    max-width: 100%;
+
+}
+
+/* HEADER */
+.app-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #111111;
+
+}
+
+.logo img {
+    padding: 10px;
+    width: 220px;
+}
+
+.search-bar input {
+
+    font-size: 16px;
+}
+
+.search-button {
+    margin: 10px;
+    font-size: 20px;
+    background-color: #111111;
+    border: #111;
+    color: hwb(205 90% 5%);
+    cursor: pointer;
+}
+
+/* Main */
+main {
+    background-color: #1a1919;
+}
+
+.container {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    ;
+}
+
+.col {
+    flex: 1 1 calc(20% - 10px);
+    margin: 5px;
+}
+
+.section-title {
+    padding: 15px;
+    color: #ffffff;
+    font-size: 30px;
+}
+
+/* Card */
+.card {
+    position: relative;
+    overflow: hidden;
+}
+
+.card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-body {
+    width: 100%;
+    height: 100%;
+    background-color: #212020;
+    color: #f0f8ff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    left: 50%;
+    transform: translate(-50%);
+    opacity: 0;
+    z-index: 1;
+    overflow-y: auto; 
+    padding: 20px;
+
+}
+
+.card:hover .card-body {
+    opacity: 1;
+}
+
+.card:hover .card-img {
+    opacity: 0;
+    z-index: -1
+}
+
+.card-body::-webkit-scrollbar { 
+    display: none;
+}
+
+.flag {
+    width: 30px;
+}
+
+.star {
+    color: gold;
 }
